# SimpleSDF

./: CMakeLists.txt  README.md
include/: SDF2D.hpp  SDF3D.hpp  SDFCornell.hpp
shaders/: rsm_light.frag  rsm_light_3d.frag  sdf2d.frag  sdf2dCircle.frag  sdf2dCircleRect.frag  sdf3d.frag  sdf_practice.frag  triangle.frag  triangle.vert
src/: SDF2D.cpp  SDF3D.cpp  SDFCornell.cpp  main.cpp
